--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "url": "https://github.com/sulfidate/myFlix-client/issues"
   },
   "homepage": "https://github.com/sulfidate/myFlix-client#readme",
+  "dependencies": {
+    "@parcel/transformer-sass": "^2.0.0-beta.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "description": ""
 }
